Exercicios/Lista_1/exercicio_4/compiling_error.txt
/home/marcos/github/AEDs/Exercicios/Lista_1/exercicio_4/main.c: In function ‘main’:
/home/marcos/github/AEDs/Exercicios/Lista_1/exercicio_4/main.c:12:15: error: incompatible type for argument 1 of ‘rotacionar’
   rotacionar (*valores,A,B,C);
               ^
In file included from /home/marcos/github/AEDs/Exercicios/Lista_1/exercicio_4/main.c:3:0:
/home/marcos/github/AEDs/Exercicios/Lista_1/exercicio_4/TADRotacao.h:10:6: note: expected ‘numero * {aka struct <anonymous> *}’ but argument is of type ‘numero {aka struct <anonymous>}’
 void rotacionar(numero *valores, int a, int b, int c);
      ^~~~~~~~~~
